# django_cityloc_pkg_steves2571

./: .gitignore  README.md  setup.cfg  urls.py
django_cityloc_pkg.egg-info/: PKG-INFO
django_cityloc_pkg_steves2571/django_cityloc_pkg/: setup.cfg
django_cityloc_pkg_steves2571/django_cityloc_pkg/django_cityloc_pkg.egg-info/: SOURCES.txt  top_level.txt
docs/: conf.py  index.rst
hello_django/: settings.py
