[metadata]
name = django_cityloc_pkg_steves2571
version = 0.0.1
description = A Django app about city locations
author = Author Name
author_email = authoremail@example.com
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.13  # Add if supporting Python 3.13

[options]
include_package_data = true
packages = find:
# Optionally, you can specify additional packages or exclusions
# package_dir = 
#     = src  # If your packages are in a src/ directory
# exclude = 
#     tests  # Exclude test directories if not needed
python_requires = >=3.8
install_requires = 
    Django >=4.2  # Updated for compatibility with Python 3.13

[options.packages.find]
# This section allows you to customize find_packages() behavior
# For example, you can exclude specific directories or include others
# exclude = tests, docs  # Exclude test or docs directories if not needed
# include = citylocations.*, helloapp  # Explicitly include specific packages if needed